# thinkloop_ai

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Makefile  PRD.md  PROJECT_SETUP_COMPLETE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: SECRETS.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
agents/: backend-agent.md  frontend-agent.md
backend/: __init__.py  run.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/api/: __init__.py  auth.py  health.py  tutor.py
backend/app/models/: __init__.py  refresh_token.py  user.py
backend/app/schemas/: __init__.py  common.py  user.py
backend/app/services/: auth.py  tutor.py
backend/app/utils/: jwt.py  security.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_health.py  test_tutor.py
docs/: API_SPEC.md  DATABASE_DESIGN.md  PROMPTS.md  SYSTEM_DESIGN.md
frontend/: index.html
frontend/js/: api.js  app.js
